# dupels

./: .gitignore  Cargo.toml  Makefile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
dupels-c-ffi/: Cargo.toml  Makefile  README.md  build.rs
dupels-c-ffi/src/: lib.rs
dupels-cli/: Cargo.toml
dupels-cli/src/: main.rs
dupels-cli/tests/: integration.rs
dupels-gui/: Cargo.toml
dupels-gui/src/: main.rs
dupels-lib/: Cargo.toml
dupels-lib/src/: cli.rs  dupels.rs  gui.rs  lib.rs
src/: cli.rs  dupels.rs  lib.rs  libs.rs  main.rs
tests/: integration.rs
