[package]
name = "dupels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
md5 = "0.7.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3.7.0"